--- a/app/views/appellant-submission/v16/before-you-start/removal-variation-conditions.html
+++ b/app/views/appellant-submission/v16/before-you-start/removal-variation-conditions.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-011-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 What type of planning permission do the conditions apply to? - Before you start - {{serviceName}} - GOV.UK
