--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/appeal-statement.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-APP-001-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Your appeal statement - Upload documents for your appeal - {{serviceName}} - GOV.UK
