--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-APP-006-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 Do you plan to submit a planning obligation to support your appeal? - Upload documents for your appeal - {{serviceName}} - GOV.UK
