--- a/app/views/appellant-submission/v16/listed-building/declaration.html
+++ b/app/views/appellant-submission/v16/listed-building/declaration.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-DEC-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Declaration - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
