--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/plans-drawings-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-003-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Plans, drawings and supporting documents - Upload documents from your planning application - {{serviceName}} - GOV.UK
