--- a/app/views/appellant-submission/v16/listed-building/procedure-type/inquiry/why.html
+++ b/app/views/appellant-submission/v16/listed-building/procedure-type/inquiry/why.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-DYA-003-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Why would you prefer an inquiry? - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
