--- a/app/views/appellant-submission/v16/save-return/confirm-email-resent.html
+++ b/app/views/appellant-submission/v16/save-return/confirm-email-resent.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-004-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% set title = "We’ve sent you another link" %}
 
