--- a/app/views/appellant-submission/v16/save-return/input-code.html
+++ b/app/views/appellant-submission/v16/save-return/input-code.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-009-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Enter the code we sent to your email address" %}
 
