--- a/app/views/appellant-submission/v16/before-you-start/enforcement-notice.html
+++ b/app/views/appellant-submission/v16/before-you-start/enforcement-notice.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-006-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Have you received an enforcement notice? - Before you start - {{serviceName}} - GOV.UK
