--- a/app/views/appellant-submission/v16/listed-building/contact-details/your-details.html
+++ b/app/views/appellant-submission/v16/listed-building/contact-details/your-details.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PYC-003-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Contact details - Provide your contact details - {{serviceName}} - GOV.UK
