--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/certificate-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/certificate-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-008-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 Ownership certificate - Upload documents from your planning application - {{serviceName}} - GOV.UK
