--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/certificate.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/certificate.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-007-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 Did you submit a separate ownership certificate document with your application? - Upload documents from your planning application - {{serviceName}} - GOV.UK
