--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/development-changed.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/development-changed.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-009-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
 Did the proposed development change after you submitted your application? - Upload documents from your planning application - {{serviceName}} - GOV.UK
