--- a/app/views/appellant-submission/v16/listed-building/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v16/listed-building/procedure-type/inquiry/days.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-DYA-004-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   How many days would you expect the inquiry to last? - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
