--- a/app/views/appellant-submission/v16/full/task-list.html
+++ b/app/views/appellant-submission/v16/full/task-list.html
@@ -1,8 +1,17 @@
-{% set pageref = "FUL-TL-AS16" %}
+{% set pageref = "FUL-TL-AS15" %}
 {% extends "layout.html" %}
 
 {% block pageTitle %}
   Task list - Appeal a planning decision - {{serviceName}} - GOV.UK
+{% endblock %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
 {% endblock %}
 
 {% block content %}
@@ -13,14 +22,6 @@
       <h1 class="govuk-heading-xl">
         Appeal a planning decision
       </h1>
-
-      <p class="govuk-body govuk-!-margin-bottom-7">
-        {% if data['bys-v11-enforcementeffectivedate-day'] %}
-          Your deadline to appeal is 11.59pm on Monday {{ data["appealsub-"+version+"-bys-deadline-day"] }} {{ data["appealsub-"+version+"-bys-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-bys-deadline-year"] }}.
-        {% else %}
-          Your deadline to appeal is {{ 20 | daysInFuture }}.
-        {% endif %}
-      </p>
       <!--h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{data['sections-completed-text']}}</h2-->
       <!--p class="govuk-body govuk-!-margin-bottom-7">You have completed {{data['sections-completed']}} of 5 sections.</p-->
 
@@ -46,15 +47,15 @@
       {% endif %}
 
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Appeal incomplete</h2>
-      <p class="govuk-body govuk-!-margin-bottom-7">You have completed {{taskcount}} of 6 tasks.</p>
+      <p class="govuk-body">You have completed {{taskcount}} of 6 tasks.</p>
 
-      <!--div class="govuk-warning-text">
-        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-        <strong class="govuk-warning-text__text">
-          <span class="govuk-warning-text__assistive">Warning</span>
-          You must submit your appeal by 11.59pm on {{ data["appealsub-"+version+"-beforeyoustart-deadline-day"] }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-year"] }}. If you miss this deadline, you lose your right to appeal.
-        </strong>
-      </div-->
+      <p class="govuk-body govuk-!-margin-bottom-7">
+        {% if data['appealsub-v16-enforcementeffectivedate-day'] %}
+          Your deadline to appeal is {{ data['appealsub-v16-enforcementeffectivedate-day'] }} {{ data['bys-v11-enforcementeffectivedate-month'] | formatMonth }} {{ data['bys-v11-enforcementeffectivedate-year'] }}.
+        {% else %}
+          Your deadline to appeal is {{ 20 | daysInFuture }}.
+        {% endif %}
+      </p>
 
       <div class="app-task-list app-task-list--fullappeal">
         <ul class="app-task-list__items">
@@ -166,7 +167,7 @@
       </div>
 
     </div>
-    
+
   </div>
 
 {% endblock %}
