--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/appeal-statement.html
@@ -1,4 +1,4 @@
-{% set pageref = "LB-APP-001-AS16" %}
+{% set pageref = "LB-APP-001-AS15" %}
 {% extends "layout.html" %}
 
 {% block pageTitle %}
@@ -39,7 +39,7 @@
           If you refer to any documents in your appeal statement, for example photographs, you can upload them in the next step.
         </p>
         <p class="govuk-body">
-          You should avoid including sensitive information (also called special category information) if it’s not relevant to your appeal. Any sensitive information you share may be shared publicly if the Planning Inspectorate agrees that it’s relevant to your appeal.
+          You should avoid including sensitive information (also called special category information) if it’s not relevant to your appeal. Any sensitive information you share may be shared publicly if the Planning Inspectorate agrees that it's relevant to your appeal.
         </p>
         <p class="govuk-body">
           You must not include inflammatory or abusive language.
