--- a/app/views/appellant-submission/v16/listed-building/appeal-site/knows-some/tell-landowners.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/knows-some/tell-landowners.html
@@ -1,4 +1,4 @@
-{% set pageref = "LB-AAS-008-AS16" %}
+{% set pageref = "LB-AAS-008-AS15" %}
 {% extends "layout.html" %}
 
 {% block pageTitle %}
@@ -41,7 +41,7 @@
           <p class="govuk-body">You must have told the landowners you know about your appeal.</p>
           <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
 
-          <h2 class="govuk-heading-m">Confirm that you’ve told the other landowners</h2>
+          <h2 class="govuk-heading-m">Confirm that you've told the other landowners</h2>
           <p class="govuk-body">I confirm that:</p>
 
           {{ govukCheckboxes({
@@ -72,7 +72,7 @@
           <p class="govuk-body">You must  have told the landowners you do know about your appeal.</p>
           <p class="govuk-body">You must have done this within the last 21 days using a copy of <a href="javascript:preventDefault();">the form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
 
-          <h2 class="govuk-heading-m">Confirm that you’ve told the landowners</h2>
+          <h2 class="govuk-heading-m">Confirm that you've told the landowners</h2>
           <p class="govuk-body">I confirm that:</p>
 
           {{ govukCheckboxes({
