--- a/app/views/appellant-submission/v16/expedited/task-list.html
+++ b/app/views/appellant-submission/v16/expedited/task-list.html
@@ -12,43 +12,16 @@
         Appeal a householder planning decision
       </h1>
 
+      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Application incomplete</h2>
+      <p class="govuk-body">You have completed 0 of 5 sections.</p>
+
       <p class="govuk-body govuk-!-margin-bottom-7">
-        {% if data['bys-v11-enforcementeffectivedate-day'] %}
-          Your deadline to appeal is 11.59pm on Monday {{ data["appealsub-"+version+"-bys-deadline-day"] }} {{ data["appealsub-"+version+"-bys-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-bys-deadline-year"] }}.
+        {% if data['appealsub-v16-enforcementeffectivedate-day'] %}
+          Your deadline to appeal is {{ data['appealsub-v16-enforcementeffectivedate-day'] }} {{ data['bys-v11-enforcementeffectivedate-month'] | formatMonth }} {{ data['bys-v11-enforcementeffectivedate-year'] }}.
         {% else %}
           Your deadline to appeal is {{ 20 | daysInFuture }}.
         {% endif %}
       </p>
-
-      <!-- <div class="govuk-inset-text">
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
-          Appeal details
-        </h2>
-        <dl class="govuk-summary-list  govuk-summary-list--no-border">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-!-width-one-half">
-              Planning application number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              22/12345/FUL
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Deadline to appeal
-            </dt>
-            <dd class="govuk-summary-list__value">
-              12 May 2022
-            </dd>
-          </div>
-        </dl>
-      </div> -->
-
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Application incomplete
-      </h2>
-
-      <p class="govuk-body govuk-!-margin-bottom-7">You have completed 0 of 5 sections.</p>
 
       <ol class="app-task-list">
         <li>
