--- a/app/views/appellant-submission/v16/listed-building/confirmation.html
+++ b/app/views/appellant-submission/v16/listed-building/confirmation.html
@@ -1,4 +1,4 @@
-{% set pageref = "LB-CON-AS16" %}
+{% set pageref = "LB-CON-AS15" %}
 {% extends "layout.html" %}
 
 {% block pageTitle %}
@@ -26,7 +26,7 @@
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
       <p class="govuk-body">
-        We’ve sent you a confirmation email with a link to download a copy of your appeal.
+        We've sent you a confirmation email with a link to download a copy of your appeal.
       </p>
       {{ govukInsetText({
         text: "You need to send a copy of your appeal to the local planning department."
@@ -40,7 +40,7 @@
       </h2>
 
       <p class="govuk-body">
-        We'll check you’ve submitted everything we need to progress your appeal. We'll contact you once we’ve done this.
+        We'll check you've submitted everything we need to progress your appeal. We'll contact you once we've done this.
       </p>
 
       <br><br><br><br><br>
