--- a/app/views/appellant-submission/v16/listed-building/task-list.html
+++ b/app/views/appellant-submission/v16/listed-building/task-list.html
@@ -1,4 +1,4 @@
-{% set pageref = "LB-TL-AS16" %}
+{% set pageref = "LB-TL-AS15" %}
 {% extends "layout.html" %}
 
 {% block pageTitle %}
@@ -23,16 +23,6 @@
         Appeal a listed building consent decision
       </h1>
 
-      <p class="govuk-body govuk-!-margin-bottom-7">
-        {% if data['bys-v11-enforcementeffectivedate-day'] %}
-          Your deadline to appeal is 11.59pm on Monday {{ data["appealsub-"+version+"-bys-deadline-day"] }} {{ data["appealsub-"+version+"-bys-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-bys-deadline-year"] }}.
-        {% else %}
-          Your deadline to appeal is {{ 20 | daysInFuture }}.
-        {% endif %}
-      </p>
-      <!--h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{data['sections-completed-text']}}</h2-->
-      <!--p class="govuk-body govuk-!-margin-bottom-7">You have completed {{data['sections-completed']}} of 5 sections.</p-->
-
       <!-- Count completed tasks -->
       {% set taskcount = 0 %}
       {% if data["appealsub-"+version+"-taskliststatus-contactdetails"] == "Complete" %}
@@ -55,15 +45,15 @@
       {% endif %}
 
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Appeal incomplete</h2>
-      <p class="govuk-body govuk-!-margin-bottom-7">You have completed {{taskcount}} of 6 tasks.</p>
+      <p class="govuk-body">You have completed {{taskcount}} of 6 tasks.</p>
 
-      <!--div class="govuk-warning-text">
-        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-        <strong class="govuk-warning-text__text">
-          <span class="govuk-warning-text__assistive">Warning</span>
-          You must submit your appeal by 11.59pm on {{ data["appealsub-"+version+"-beforeyoustart-deadline-day"] }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-year"] }}. If you miss this deadline, you lose your right to appeal.
-        </strong>
-      </div-->
+      <p class="govuk-body govuk-!-margin-bottom-7">
+        {% if data['appealsub-v16-enforcementeffectivedate-day'] %}
+          Your deadline to appeal is {{ data['appealsub-v16-enforcementeffectivedate-day'] }} {{ data['bys-v11-enforcementeffectivedate-month'] | formatMonth }} {{ data['bys-v11-enforcementeffectivedate-year'] }}.
+        {% else %}
+          Your deadline to appeal is {{ 20 | daysInFuture }}.
+        {% endif %}
+      </p>
 
       <div class="app-task-list app-task-list--fullappeal">
         <ul class="app-task-list__items">
@@ -181,7 +171,7 @@
       }) }}
 
     </div>
-
+    
   </div>
 
 {% endblock %}
