--- a/app/views/enforcement/v3/additional-people/additional-people.html
+++ b/app/views/enforcement/v3/additional-people/additional-people.html
@@ -56,7 +56,13 @@
 
       <div class="govuk-button-group">
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       </div>
 
