--- a/app/views/enforcement/v3/appeal-site/health-and-safety-issues.html
+++ b/app/views/enforcement/v3/appeal-site/health-and-safety-issues.html
@@ -92,9 +92,14 @@
         ]
       }) }}
 
-
       {{ govukButton({
         text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </form>
