--- a/app/views/enforcement/v3/appeal-site/postcode-address.html
+++ b/app/views/enforcement/v3/appeal-site/postcode-address.html
@@ -101,7 +101,13 @@
         </p>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
 
       </form>
