--- a/app/views/enforcement/v3/declaration.html
+++ b/app/views/enforcement/v3/declaration.html
@@ -63,6 +63,12 @@
           text: "Confirm and submit appeal"
         }) }}
 
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+
       </form>
 
     </div>
