--- a/app/views/enforcement/v3/grounds/fees.html
+++ b/app/views/enforcement/v3/grounds/fees.html
@@ -59,7 +59,13 @@
       </div>
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </form>
