--- a/app/views/enforcement/v3/grounds/groundG.html
+++ b/app/views/enforcement/v3/grounds/groundG.html
@@ -101,7 +101,13 @@
         <!-- go to application question -->
         {{ govukButton({
           href: "application",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
 
       </div>
