--- a/app/views/enforcement/v3/appeal-site/site-occupation.html
+++ b/app/views/enforcement/v3/appeal-site/site-occupation.html
@@ -57,7 +57,13 @@
       }) }}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </form>
