--- a/app/views/enforcement/v3/before-you-continue.html
+++ b/app/views/enforcement/v3/before-you-continue.html
@@ -59,7 +59,13 @@
 
       {{ govukButton({
         href: "task-list",
-        text: "Continue"
+        text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </div>
