--- a/app/views/enforcement/v3/grounds/fees-exempt.html
+++ b/app/views/enforcement/v3/grounds/fees-exempt.html
@@ -73,46 +73,14 @@
       </div>
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save and continue"
       }) }}
 
-      <!-- route user based on what they selected -->
-      <!-- {% if data['grounds-2'] %}
-        {{ govukButton({
-          href: "groundB",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-3'] %}
-        {{ govukButton({
-          href: "groundC",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-4'] %}
-        {{ govukButton({
-          href: "groundD",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-5'] %}
-        {{ govukButton({
-          href: "groundE",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-6'] %}
-        {{ govukButton({
-          href: "groundF",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-7'] %}
-        {{ govukButton({
-          href: "groundG",
-          text: "Continue"
-        }) }}
-      {% else %}
-        {{ govukButton({
-          href: "application",
-          text: "Continue"
-        }) }}
-      {% endif %} -->
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
 
     </form>
 
