--- a/app/views/enforcement/v3/grounds/grounds.html
+++ b/app/views/enforcement/v3/grounds/grounds.html
@@ -98,7 +98,13 @@
         </div>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
 
       </form>
