--- a/app/views/enforcement/v3/procedure/hearing.html
+++ b/app/views/enforcement/v3/procedure/hearing.html
@@ -44,7 +44,13 @@
       }) }}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </form>
