--- a/app/views/enforcement/v3/upload/planning-obligation.html
+++ b/app/views/enforcement/v3/upload/planning-obligation.html
@@ -84,7 +84,13 @@
       </details>
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save and continue"
+      }) }}
+
+      {{ govukButton({
+        href: "",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
       }) }}
 
     </form>
