--- a/app/views/enforcement/v3/check-your-answers.html
+++ b/app/views/enforcement/v3/check-your-answers.html
@@ -670,7 +670,7 @@
 
         {{ govukButton({
           href: "declaration",
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
         {{ govukButton({
