--- a/app/views/enforcement/v3/grounds/application.html
+++ b/app/views/enforcement/v3/grounds/application.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/applicationmade" method="post">
+    <form action="/applicationmade-v3" method="post">
 
       <span class="govuk-caption-l">
         Choose your grounds of appeal
