--- a/app/views/enforcement/v3/grounds/fees.html
+++ b/app/views/enforcement/v3/grounds/fees.html
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form action="/feespaid" method="post">
+    <form action="/feespaid-v3" method="post">
 
       <div class="govuk-form-group">
 
