--- a/app/views/enforcement/v3/additional-people/additional-people.html
+++ b/app/views/enforcement/v3/additional-people/additional-people.html
@@ -24,7 +24,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form method="post">
+    <form action="additional-people-v3" method="post">
 
       <span class="govuk-caption-l">
         Tell us about any additional people
