--- a/app/views/enforcement/v3/grounds/application-decision.html
+++ b/app/views/enforcement/v3/grounds/application-decision.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/applicationdecision" method="post">
+      <form action="/applicationdecision-v3" method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
