Quick change to include added people in contact details

--- a/app/views/enforcement/v3/task-list.html
+++ b/app/views/enforcement/v3/task-list.html
@@ -82,7 +82,7 @@
           </li>
 
           <!-- additional people -->
-          <li class="app-task-list__item">
+          <!-- <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="additional-people/additional-people">
                 Tell us about additional people
@@ -95,7 +95,7 @@
             {% else %}
               <strong class="app-task-list__tag govuk-tag govuk-tag--grey">Not started</strong>
             {% endif %}
-          </li>
+          </li> -->
 
           <!-- appeal site -->
           <li class="app-task-list__item">
