--- a/app/views/enforcement/v3/contact-details/add-person.html
+++ b/app/views/enforcement/v3/contact-details/add-person.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Is there anyone else appealing the enforcement notice?" %}
+{% set title = "Add someone else to the appeal" %}
 
 {% block pageTitle %}
   {{title}} - Additional people - GOV.UK
@@ -24,34 +24,30 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="additional-people-v3" method="post">
+    <form action="added-people" method="post">
 
       <span class="govuk-caption-l">
-        Tell us about any additional people
+        Provide your contact details
       </span>
-      {{ govukRadios({
-        idPrefix: "enforcement-additionalpeople",
-        name: "enforcement-additionalpeople",
-        fieldset: {
-          legend: {
-            text: title,
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-          }
+
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+        {{ title }}
+      </h1>
+
+      <p class="govuk-hint">
+        You must add 1 person at a time.
+      </p>
+
+      {{ govukInput({
+        id: "enforcement-added-person",
+        name: "enforcement-added-person",
+        label: {
+          text: "Full name"
         },
         hint: {
-          text: "They must have the same address and be appealing the same enforcement notice."
+          html: hintHtml
         },
-        items: [
-          {
-            value: "Yes",
-            text: "Yes"
-          },
-          {
-            value: "No",
-            text: "No"
-          }
-        ]
+        classes: "govuk-!-width-two-thirds"
       }) }}
 
       <div class="govuk-button-group">
