--- a/app/views/enforcement/v3/contact-details/added-people.html
+++ b/app/views/enforcement/v3/contact-details/added-people.html
@@ -24,11 +24,12 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form method="post">
+    <form action="added-people-v3" method="post">
 
       <span class="govuk-caption-l">
-        Tell us about any additional people
+        Provide your contact details
       </span>
+
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
