--- a/app/views/enforcement/v3/contact-details/contact-details.html
+++ b/app/views/enforcement/v3/contact-details/contact-details.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="finish-contact-details" method="post">
+      <form action="additional-people" method="post">
 
         <span class="govuk-caption-l">
           Provide your contact details
