--- a/app/views/before-you-start/v11/notice-type.html
+++ b/app/views/before-you-start/v11/notice-type.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "What were you served with?" %}
+{% set title = "What were you served?" %}
 
 {% block pageTitle %}
   {{title}} - Before you start - GOV.UK
