--- a/app/views/before-you-start/v11/check-answers.html
+++ b/app/views/before-you-start/v11/check-answers.html
@@ -67,7 +67,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What were you served with?
+              What were you served?
             </dt>
             <dd class="govuk-summary-list__value">
               An enforcement notice
