Enforcement journey updates

--- a/app/views/enforcement/v3/contact-details/contact-details.html
+++ b/app/views/enforcement/v3/contact-details/contact-details.html
@@ -33,7 +33,7 @@
           {{ title }}
         </h1>
 
-        {{ govukInput({
+        <!-- {{ govukInput({
           id: "enforcement-your-email",
           name: "enforcement-your-email",
           label: {
@@ -44,7 +44,7 @@
           },
           classes: "govuk-!-width-two-thirds",
           value: data["enforcement-your-email"]
-        }) }}
+        }) }} -->
 
         {{ govukInput({
           label: {
