--- a/app/views/enforcement/v3/upload/supporting-documents.html
+++ b/app/views/enforcement/v3/upload/supporting-documents.html
@@ -27,7 +27,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form method="post">
+      <form action="supporting-documents-v3" method="post">
 
         <span class="govuk-caption-l">
           Upload documents for your appeal
