Fix issues with ASv16

--- a/app/views/appellant-submission/v16/before-you-start/claiming-costs.html
+++ b/app/views/appellant-submission/v16/before-you-start/claiming-costs.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-007-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Are you claiming costs as part of your appeal?- Before you start - {{serviceName}} - GOV.UK
