--- a/app/views/appellant-submission/v16/before-you-start/notice-decision-date.html
+++ b/app/views/appellant-submission/v16/before-you-start/notice-decision-date.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-005-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   What’s the decision date on the letter from the local planning department?​ - Before you start - {{serviceName}} - GOV.UK
