--- a/app/views/appellant-submission/v16/before-you-start/permission-granted-refused.html
+++ b/app/views/appellant-submission/v16/before-you-start/permission-granted-refused.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-004-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Was your planning application granted or refused? - Before you start - {{serviceName}} - GOV.UK
