--- a/app/views/appellant-submission/v16/before-you-start/shutter/out-of-time-no-decision.html
+++ b/app/views/appellant-submission/v16/before-you-start/shutter/out-of-time-no-decision.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-OOT-2-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   You cannot appeal - {{serviceName}} - GOV.UK
