--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/plans-drawings-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-APP-003-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   New plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
