--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/supporting-documents.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/supporting-documents.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-APP-004-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Supporting documents - Upload documents for your appeal - {{serviceName}} - GOV.UK
