--- a/app/views/appellant-submission/v16/listed-building/appeal-site/site-visible.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/site-visible.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-AAS-015-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   How is visibility restricted? - Tell us about the appeal site - {{serviceName}} - GOV.UK
