--- a/app/views/appellant-submission/v16/listed-building/check-your-answers.html
+++ b/app/views/appellant-submission/v16/listed-building/check-your-answers.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-CYA-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Check your answers - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
