--- a/app/views/appellant-submission/v16/listed-building/contact-details/applicant-name.html
+++ b/app/views/appellant-submission/v16/listed-building/contact-details/applicant-name.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PYC-002-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   What is the applicant’s name? - Provide your contact details - {{serviceName}} - GOV.UK
