--- a/app/views/appellant-submission/v16/before-you-start/listed-building.html
+++ b/app/views/appellant-submission/v16/before-you-start/listed-building.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-003-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Was your planning application about a listed building? - Before you start - {{serviceName}} - GOV.UK
