--- a/app/views/appellant-submission/v16/before-you-start/prior-approval.html
+++ b/app/views/appellant-submission/v16/before-you-start/prior-approval.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-010-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Did you apply for prior approval to extend an existing home? - Before you start - {{serviceName}} - GOV.UK
