--- a/app/views/appellant-submission/v16/before-you-start/what-are-you-appealing.html
+++ b/app/views/appellant-submission/v16/before-you-start/what-are-you-appealing.html
@@ -1,5 +1,5 @@
 {% set pageref = "BYS-002-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   What type of planning application is your appeal about? - Before you start - {{serviceName}} - GOV.UK
