--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation-status.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation-status.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-APP-007-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
 What is the status of your planning obligation? - Upload documents for your appeal - {{serviceName}} - GOV.UK
