--- a/app/views/appellant-submission/v16/listed-building/appeal-site/knows-all/tell-landowners.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/knows-all/tell-landowners.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-AAS-005-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Telling the {% if data["appealsub-"+version+"-appealsite-ownsome"] == "Yes" %}other {% endif %}landowners - Tell us about the appeal site - {{serviceName}} - GOV.UK
