--- a/app/views/appellant-submission/v16/listed-building/appeal-site/knows-some/advertising-appeal.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/knows-some/advertising-appeal.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-AAS-007-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Advertising your appeal - Tell us about the appeal site - {{serviceName}} - GOV.UK
