--- a/app/views/appellant-submission/v16/listed-building/appeal-site/own-rest.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/own-rest.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-AAS-004-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Do you know who owns the {% if data["appealsub-"+version+"-appealsite-ownsome"] == "Yes" %}rest of the {% endif %}land involved in the appeal? - Tell us about the appeal site - {{serviceName}} - GOV.UK
