--- a/app/views/appellant-submission/v16/listed-building/appeal-site/site-address.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/site-address.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-AAS-001-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   What is the address of the appeal site? - Upload documents for your appeal - {{serviceName}} - GOV.UK
