--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/design-access-statement-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/design-access-statement-upload.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-005-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Design and access statement - Upload documents from your planning application - {{serviceName}} - GOV.UK
