--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/original-decision.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/original-decision.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-PLA-011-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
 Decision notice from your original planning application - Upload documents from your planning application - {{serviceName}} - GOV.UK
