--- a/app/views/appellant-submission/v16/listed-building/procedure-type/decide.html
+++ b/app/views/appellant-submission/v16/listed-building/procedure-type/decide.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-DYA-001-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   How would you prefer us to decide your appeal? - Tell us how you would like us to decide your appeal - {{serviceName}} - GOV.UK
