--- a/app/views/appellant-submission/v16/listed-building/task-list.html
+++ b/app/views/appellant-submission/v16/listed-building/task-list.html
@@ -1,5 +1,5 @@
 {% set pageref = "LB-TL-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% block pageTitle %}
   Task list - Appeal a planning decision - {{serviceName}} - GOV.UK
