--- a/app/views/appellant-submission/v16/save-return/appeal-saved.html
+++ b/app/views/appellant-submission/v16/save-return/appeal-saved.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-007-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "Your appeal for application 1234567 has been saved" %}
 
