--- a/app/views/appellant-submission/v16/save-return/appeal-submitted.html
+++ b/app/views/appellant-submission/v16/save-return/appeal-submitted.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-013-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "Appeal submitted" %}
 
