--- a/app/views/appellant-submission/v16/save-return/before-you-continue.html
+++ b/app/views/appellant-submission/v16/save-return/before-you-continue.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-008-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "You’ll need to submit some documents with your appeal" %}
 
