--- a/app/views/appellant-submission/v16/save-return/continue-appeal.html
+++ b/app/views/appellant-submission/v16/save-return/continue-appeal.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-011-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "Enter your appeal details" %}
 
