--- a/app/views/appellant-submission/v16/save-return/email-confirmed.html
+++ b/app/views/appellant-submission/v16/save-return/email-confirmed.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-005-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "Your email address is confirmed" %}
 
