--- a/app/views/appellant-submission/v16/save-return/what-is-your-email.html
+++ b/app/views/appellant-submission/v16/save-return/what-is-your-email.html
@@ -1,5 +1,5 @@
 {% set pageref = "SAR-002-AS15" %}
-{% extends "layout.html" %}
+{% extends "layouts/appellant-submission/v16.html" %}
 
 {% set title = "What’s your email address?" %}
 
